Add meta charset to html and update banner

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Message Generator</title>
         <link href="./resources/styles.css" rel="stylesheet">
+        <meta charset="UTF-8">
     </head>
     <body>
         <header>
@@ -25,7 +26,7 @@
             <div class="message-container">
                 <div class="message-box">
                     <div class="message" id="message">
-                        <p>This should fade in!</p>
+                        
                     </div>
 
                 </div>
